--- a/10-Weather-App-Express/package.json
+++ b/10-Weather-App-Express/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "hbs": "^4.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
