--- a/10-Weather-App-Express/package.json
+++ b/10-Weather-App-Express/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.0.6"
+    "hbs": "^4.0.6",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
