Task Manager App | MongoDB Basic Connection

--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -8,5 +8,8 @@
     },
     "keywords": [],
     "author": "Aditya Hajare",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "mongodb": "^3.4.1"
+    }
 }
