--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "mongodb": "^3.4.1",
-        "mongoose": "^5.8.3"
+        "mongoose": "^5.8.3",
+        "validator": "^12.1.0"
     }
 }
