--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -11,6 +11,7 @@
     "author": "Aditya Hajare",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "mongodb": "^3.4.1",
         "mongoose": "^5.8.3",
