--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -18,6 +18,7 @@
         "mongodb": "^3.4.1",
         "mongoose": "^5.8.3",
         "multer": "^1.4.2",
+        "sharp": "^0.23.4",
         "validator": "^12.1.0"
     },
     "devDependencies": {
