--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -11,6 +11,7 @@
     "author": "Aditya Hajare",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^6.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
