--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "start": "SET NODE_ENV=prod || export NODE_ENV=prod & nodemon src/index.js",
+        "dev": "SET NODE_ENV=dev || export NODE_ENV=dev & nodemon src/index.js"
     },
     "keywords": [],
     "author": "Aditya Hajare",
@@ -14,6 +14,7 @@
         "@sendgrid/mail": "^6.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.4.1",
