--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -4,20 +4,23 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "start": "NODE_ENV=prod node src/index.js",
+        "dev": "NODE_ENV=dev nodemon src/index.js"
     },
     "keywords": [],
     "author": "Aditya Hajare",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^6.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.4.1",
         "mongoose": "^5.8.3",
         "multer": "^1.4.2",
+        "sharp": "^0.23.4",
         "validator": "^12.1.0"
     },
     "devDependencies": {
