--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "NODE_ENV=prod node src/index.js",
-        "dev": "NODE_ENV=dev nodemon src/index.js"
+        "dev": "NODE_ENV=dev nodemon src/index.js",
+        "test": "NODE_ENV=test jest"
     },
     "keywords": [],
     "author": "Aditya Hajare",
@@ -24,6 +25,7 @@
         "validator": "^12.1.0"
     },
     "devDependencies": {
+        "jest": "^24.9.0",
         "nodemon": "^2.0.2"
     }
 }
