Jest | Users API Testing | Should Signup A User

--- a/11-Tasks-Manager-App/env/test.env
+++ b/11-Tasks-Manager-App/env/test.env
@@ -1,5 +1,5 @@
-PORT=3000
+PORT=4000
 JWT_SECRET='jwt-secret-characters'
-MONGO_CONNECTION_STRING='mongodb://127.0.0.1:27017/task-manager-app'
+MONGO_CONNECTION_STRING='mongodb://127.0.0.1:27017/test-task-manager-app'
 SENDGRID_API_KEY='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'
 APP_EMAIL='aditya.hajare@jetsynthesys.com'
