--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -8,6 +8,10 @@
         "dev": "NODE_ENV=dev nodemon src/index.js",
         "test": "NODE_ENV=test jest --watch"
     },
+    "jest": {
+        "verbose": true,
+        "testEnvironment": "node"
+    },
     "keywords": [],
     "author": "Aditya Hajare",
     "license": "ISC",
@@ -26,6 +30,7 @@
     },
     "devDependencies": {
         "jest": "^24.9.0",
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.2",
+        "supertest": "^4.0.2"
     }
 }
