--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "NODE_ENV=prod node src/index.js",
         "dev": "NODE_ENV=dev nodemon src/index.js",
-        "test": "NODE_ENV=test jest --watch"
+        "test": "NODE_ENV=test jest --watch --runInBand"
     },
     "jest": {
         "verbose": true,
