--- a/12-Socket-Chat-App/package.json
+++ b/12-Socket-Chat-App/package.json
@@ -4,8 +4,16 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js -e js,hbs"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.2"
+    }
 }
