--- a/12-Socket-Chat-App/package.json
+++ b/12-Socket-Chat-App/package.json
@@ -11,7 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "socket.io": "^2.3.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
