--- a/13-Shop-App-MySQL/package.json
+++ b/13-Shop-App-MySQL/package.json
@@ -4,9 +4,8 @@
     "description": "Complete Node.js Guide",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js",
-        "start-server": "node app.js"
+        "dev": "NODE_ENV=dev nodemon app.js",
+        "start": "NODE_ENV=prod node app.js"
     },
     "author": "Aditya Hajare",
     "license": "ISC",
@@ -15,9 +14,11 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
+        "dotenv": "^8.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.3",
         "express-handlebars": "^3.0.0",
+        "mysql2": "^2.1.0",
         "pug": "^2.0.3"
     }
 }
