--- a/15-Shop-App-MongoDB/env/dev.env
+++ b/15-Shop-App-MongoDB/env/dev.env
@@ -6,3 +6,6 @@ MYSQL_DATABASE='nodejs-shop'
 MYSQL_USER='root'
 MYSQL_PASSWORD='adi123'
 MYSQL_PORT='3306'
+
+#MongoDB
+MONGO_CONNECTION_STRING='mongodb://127.0.0.1:27017/shop-app'
