--- a/19-Shop-App-Session-Authentication/package.json
+++ b/19-Shop-App-Session-Authentication/package.json
@@ -13,6 +13,7 @@
         "nodemon": "^1.18.3"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "connect-mongodb-session": "^2.2.0",
         "dotenv": "^8.2.0",
