--- a/19-Shop-App-Session-Authentication/package.json
+++ b/19-Shop-App-Session-Authentication/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
+        "connect-flash": "^0.1.1",
         "connect-mongodb-session": "^2.2.0",
         "csurf": "^1.10.0",
         "dotenv": "^8.2.0",
