--- a/20-Shop-App-Token-Authentication/env/dev.env
+++ b/20-Shop-App-Token-Authentication/env/dev.env
@@ -7,5 +7,9 @@ MYSQL_USER='root'
 MYSQL_PASSWORD='adi123'
 MYSQL_PORT='3306'
 
-#MongoDB
+# MongoDB
 MONGO_CONNECTION_STRING='mongodb://127.0.0.1:27017/shop-app'
+
+# Email
+SENDGRID_API_KEY='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'
+APP_EMAIL='aditya.hajare@jetsynthesys.com'
