--- a/20-Shop-App-Token-Authentication/package.json
+++ b/20-Shop-App-Token-Authentication/package.json
@@ -13,6 +13,7 @@
         "nodemon": "^1.18.3"
     },
     "dependencies": {
+        "@sendgrid/mail": "^6.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "connect-flash": "^0.1.1",
