--- a/22-Shop-App-Error-Handling/package.json
+++ b/22-Shop-App-Error-Handling/package.json
@@ -27,6 +27,7 @@
         "express-validator": "^6.3.1",
         "mongodb": "^3.4.1",
         "mongoose": "^5.8.5",
-        "pug": "^2.0.3"
+        "pug": "^2.0.3",
+        "winston": "^3.2.1"
     }
 }
