--- a/23-Shop-App-Files-Upload-Download/package.json
+++ b/23-Shop-App-Files-Upload-Download/package.json
@@ -28,6 +28,7 @@
         "mongodb": "^3.4.1",
         "mongoose": "^5.8.5",
         "multer": "^1.4.2",
+        "pdfkit": "^0.11.0",
         "pug": "^2.0.3",
         "winston": "^3.2.1"
     }
