--- a/24-Shop-App-Pagination/env/dev.env
+++ b/24-Shop-App-Pagination/env/dev.env
@@ -13,3 +13,6 @@ MONGO_CONNECTION_STRING='mongodb://127.0.0.1:27017/shop-app'
 # Email
 SENDGRID_API_KEY='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'
 APP_EMAIL='aditya.hajare@jetsynthesys.com'
+
+# Pagination
+PAGE_ITEMS_PER_PAGE=2
