--- a/25-Shop-App-Payments/package.json
+++ b/25-Shop-App-Payments/package.json
@@ -30,6 +30,7 @@
         "multer": "^1.4.2",
         "pdfkit": "^0.11.0",
         "pug": "^2.0.3",
+        "stripe": "^8.1.0",
         "winston": "^3.2.1"
     }
 }
