--- a/26-Blog/package.json
+++ b/26-Blog/package.json
@@ -11,6 +11,7 @@
     "author": "Aditya Hajare",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1"
     },
     "devDependencies": {
