--- a/26-ReactJS-Social-Network-Backend/package.json
+++ b/26-ReactJS-Social-Network-Backend/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-validator": "^6.3.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
