--- a/26-ReactJS-Social-Network-Backend/env/dev.env
+++ b/26-ReactJS-Social-Network-Backend/env/dev.env
@@ -2,7 +2,7 @@ PORT=8080
 
 # MySQL
 # MYSQL_HOST='127.0.0.1'
-# MYSQL_DATABASE='nodejs-shop'
+# MYSQL_DATABASE='reactjs-social-network'
 # MYSQL_USER='root'
 # MYSQL_PASSWORD='adi123'
 # MYSQL_PORT='3306'
