--- a/26-ReactJS-Social-Network-Backend/package.json
+++ b/26-ReactJS-Social-Network-Backend/package.json
@@ -14,9 +14,12 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-validator": "^6.3.1"
+        "express-validator": "^6.3.1",
+        "mysql2": "^2.1.0",
+        "sequelize": "^5.21.3",
     },
     "devDependencies": {
+        "sequelize-cli": "^5.5.1",
         "nodemon": "^2.0.2"
     }
 }
