--- a/26-ReactJS-Social-Network-Backend/package.json
+++ b/26-ReactJS-Social-Network-Backend/package.json
@@ -16,7 +16,8 @@
         "express": "^4.17.1",
         "express-validator": "^6.3.1",
         "mysql2": "^2.1.0",
-        "sequelize": "^5.21.3"
+        "sequelize": "^5.21.3",
+        "winston": "^3.2.1"
     },
     "devDependencies": {
         "sequelize-cli": "^5.5.1",
