React JS Social Network | Generate JWT token

--- a/26-ReactJS-Social-Network-Backend/env/dev.env
+++ b/26-ReactJS-Social-Network-Backend/env/dev.env
@@ -1,6 +1,6 @@
 PORT=8080
-
-# MySQL
+JWT_SECRET='my-super-duper-secret-string'
+# MySQL - This configuration is defined under config directory.
 # MYSQL_HOST='127.0.0.1'
 # MYSQL_DATABASE='reactjs-social-network'
 # MYSQL_USER='root'
