--- a/26-ReactJS-Social-Network-Backend/package.json
+++ b/26-ReactJS-Social-Network-Backend/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.3.1",
+        "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "sequelize": "^5.21.3",
