--- a/29-GraphQL/package.json
+++ b/29-GraphQL/package.json
@@ -15,12 +15,13 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-graphql": "^0.9.0",
         "express-validator": "^6.3.1",
+        "graphql": "^14.5.8",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "sequelize": "^5.21.3",
-        "socket.io": "^2.3.0",
         "winston": "^3.2.1"
     },
     "devDependencies": {
