--- a/29-GraphQL/package.json
+++ b/29-GraphQL/package.json
@@ -22,6 +22,7 @@
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "sequelize": "^5.21.3",
+        "validator": "^12.1.0",
         "winston": "^3.2.1"
     },
     "devDependencies": {
