--- a/11-Tasks-Manager-App/package.json
+++ b/11-Tasks-Manager-App/package.json
@@ -19,6 +19,7 @@
         "@sendgrid/mail": "^6.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "helmet": "^3.21.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
@@ -26,7 +27,8 @@
         "mongoose": "^5.8.3",
         "multer": "^1.4.2",
         "sharp": "^0.23.4",
-        "validator": "^12.1.0"
+        "validator": "^12.1.0",
+        "morgan": "^1.9.1"
     },
     "devDependencies": {
         "jest": "^24.9.0",
