--- a/29-ReactJS-Social-Network-Backend-GraphQL/package.json
+++ b/29-ReactJS-Social-Network-Backend-GraphQL/package.json
@@ -12,13 +12,16 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
         "express-validator": "^6.3.1",
         "graphql": "^14.5.8",
+        "helmet": "^3.21.2",
         "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.9.1",
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "sequelize": "^5.21.3",
